# AI_Gateway

./: .env.example  .gitignore  PROJECT_MEMORY.md  ROADMAP.md  docker-compose.yml
backend/: Phase_2_AI_Gateway_Summary.docx  alembic.ini  pyproject.toml  test.py
backend/alembic/: README  env.py
backend/alembic/versions/: 20260723_2108_initial_schema.py  20260723_2200_gateway_operational_models.py  20260723_2345_phase3_hardening_constraints.py
backend/src/: main.py
backend/src/api/: dependencies.py
backend/src/core/: base.py  config.py  database.py  enums.py  exceptions.py  handlers.py  lifespan.py  logging.py  session.py
backend/src/middleware/: timing.py
backend/src/models/: __init__.py  ai_model.py  ai_model_configuration.py  api_key.py  base.py  chat_session.py  message.py  mixins.py  prompt_template.py  provider.py  provider_configuration.py  provider_health.py  usage_record.py
backend/src/providers/: __init__.py  base.py  exceptions.py  factory.py  registry.py
backend/src/repositories/: __init__.py  ai_model_configuration_repository.py  ai_model_repository.py  api_key_repository.py  base.py  chat_session_repository.py  message_repository.py  prompt_template_repository.py  provider_configuration_repository.py  provider_health_repository.py  provider_repository.py  usage_record_repository.py
backend/src/schemas/: chat.py  common.py  health.py
backend/src/services/: base_llm.py  chat_service.py  ollama_service.py
backend/src/unit_of_work/: __init__.py  base.py  unit_of_work.py
backend/tests/: README.md  conftest.py  factories.py  helpers.py
(+31 files in other folders)
